<resources>
    <string name="app_name" translatable="false">MyWallet</string>
    <string name="appName" translatable="false">MyWallet</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="primeira_vez_cadastre_se">Primeira vez? Cadastre-se!</string>
    <string name="redirecionar_para_login">Já tem uma conta? Entre agora!</string>
    <string name="nome">Nome</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="conflito_cadastro">Usuário já cadastrado</string>
    <string name="erro_inesperado">Erro do servidor. Tente mais tarde</string>
    <string name="sem_nome">Nome é obrigatório</string>
    <string name="sem_email">Email é obrigatório</string>
    <string name="email_invalido">Email inválido</string>
    <string name="senhas_diferentes">As senhas devem ser iguais</string>
    <string name="sem_senha">Senha é obrigatória</string>
    <string name="dados_incorretos">Dados incorretos</string>
    <string name="nova_entrada">Nova Entrada</string>
    <string name="nova_saida">Nova Saída</string>
    <string name="total">Total</string>
    <string name="sem_registros">Você ainda não adicionou nenhum registro! :)</string>
    <string name="salvar_transacao">Salvar transação</string>
    <string name="descricao">Descrição</string>
    <string name="nova_despesa">Nova Saída</string>
    <string name="ola">Olá</string>
    <string name="valor_transacao_invalido">Insira um valor maior que 0,00</string>
    <string name="descricao_transacao_invalida">Insira uma descrição</string>
    <string name="senha_diferente_ou_vazia">As senhas devem ser iguais e não vazias</string>
</resources>